Workspaces domain models
